Bug 164985 - Incorrect bookmarks list in Bookmark dialog after Name column sort followed by delete
Summary: Incorrect bookmarks list in Bookmark dialog after Name column sort followed b...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.3 all versions
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:25.8.0 target:25.2.2
Keywords: bibisectRequest, regression
Depends on:
Blocks:
 
Reported: 2025-02-01 18:27 UTC by Jim Raykowski
Modified: 2025-02-25 03:45 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
test file to reproduce bug (35.90 KB, application/vnd.oasis.opendocument.text)
2025-02-01 18:27 UTC, Jim Raykowski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jim Raykowski 2025-02-01 18:27:09 UTC
Created attachment 198919 [details]
test file to reproduce bug

STR:

1. Open the attached test file bookmarksdialogdeletebookmarktestfile.odt
2. Menu > Insert > Bookmark
Bookmark dialog opens
3. Click on the Bookmarks list column header Name entry to sort the list in alphabetical order by Name column entries.
4. Select Bookmark 3 entry in the list
5. Click on the Delete button

Results:

Bookmarks:
Page Name        Text
1
1
1    Bookmark 2  commodo


Expected Results:

Bookmarks:
Page Name        Text
1    Bookmark 1  1
1    Bookmark 2  commodo
1    Bookmark 4  consectetur


Additional:

Expected results are seen up to Version: 6.3.0.0.beta1+ where column sort does not work. After column sort is restored in later versions the results are as they are now.
Comment 1 m_a_riosv 2025-02-01 20:06:19 UTC
Reproducible with
Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 80c90897657896b94689513119bf05eafc21519b
CPU threads: 16; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded
Comment 2 m_a_riosv 2025-02-01 20:12:00 UTC
Latest version that works on the ones I have installed.
Versión: 5.4.7.2
Id. de compilación: c838ef25c16710f8838b1faec480ebba495259d0
Subprocs. CPU: 16; SO: Windows 6.2; Repres. IU: predet.; 
Configuración regional: es-ES (es_ES); Calc: CL

Reproducible with
Version: 6.4.7.2 (x64)
Build ID: 639b8ac485750d5696d7590a72ef1b496725cfb5
CPU threads: 16; OS: Windows 10.0 Build 26100; UI render: GL; VCL: win; 
Locale: es-ES (es_ES); UI-Language: en-US
Calc: CL
Comment 3 Jan Rheinländer 2025-02-01 20:23:04 UTC
Reproducible with export SAL_USE_VCLPLUGIN=gen

Same results.

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: fa3e0b27385258c2fbd24e02b9319e86db00e7e2
CPU threads: 4; OS: Linux 6.8; UI render: default; VCL: x11
Locale: de-DE (de_DE.UTF-8); UI: en-US
Calc: threaded
Comment 4 Jim Raykowski 2025-02-02 06:25:06 UTC
Proposed patch:
https://gerrit.libreoffice.org/c/core/+/181006
Comment 5 Commit Notification 2025-02-09 00:59:37 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/cdcaa50e60c8abbbb84b460b8ac6671fc42b9d50

resolves tdf#164985 Incorrect bookmarks list in bookmark dialog after

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2025-02-25 03:45:47 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/07432cf9be4357bbbb2246bda0f89fa631239e74

resolves tdf#164985 Incorrect bookmarks list in bookmark dialog after

It will be available in 25.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.