resolves tdf#164985 Incorrect bookmarks list in bookmark dialog after

column sort followed by delete

Change-Id: Id0ff9213b7a09faf4ed490a216e85ac7ec277af2
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/181006
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>
(cherry picked from commit cdcaa50e60c8abbbb84b460b8ac6671fc42b9d50)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/181357
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>